# collatz

./: CMakeLists.txt
include/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
